--- a/Train.ipynb
+++ b/Train.ipynb
@@ -24,9 +24,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31mtensorflow 1.7.1 has requirement numpy>=1.13.3, but you'll have numpy 1.12.1 which is incompatible.\u001b[0m\r\n",
-      "\u001b[31mipython 6.5.0 has requirement prompt-toolkit<2.0.0,>=1.0.15, but you'll have prompt-toolkit 3.0.36 which is incompatible.\u001b[0m\r\n",
-      "\u001b[31mjupyter-console 6.4.3 has requirement jupyter-client>=7.0.0, but you'll have jupyter-client 5.2.4 which is incompatible.\u001b[0m\r\n"
+      "\u001b[33m  DEPRECATION: A future pip version will change local packages to be built in-place without first copying to a temporary directory. We recommend you use --use-feature=in-tree-build to test your packages with this new behavior before it becomes the default.\n",
+      "   pip 21.3 will remove support for this functionality. You can find discussion regarding this at https://github.com/pypa/pip/issues/7555.\u001b[0m\n",
+      "\u001b[31mERROR: Could not find a version that satisfies the requirement tensorflow==1.7.1 (from unityagents) (from versions: none)\u001b[0m\n",
+      "\u001b[31mERROR: No matching distribution found for tensorflow==1.7.1\u001b[0m\n",
+      "\u001b[33mWARNING: You are using pip version 21.2.4; however, version 23.0.1 is available.\n",
+      "You should consider upgrading via the '/Users/atl/h/node/env-16.17.0/bin/python3 -m pip install --upgrade pip' command.\u001b[0m\n"
      ]
     }
    ],
@@ -494,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.16"
   }
  },
  "nbformat": 4,
