--- a/Report.ipynb
+++ b/Report.ipynb
@@ -13,6 +13,27 @@
     "First the agent used the same setup as the DQN project , reusing the Agent and Replay Buffer classes in `agent.py`.\n",
     "This version of the agent reached a maximum score of 16 and plateaued after ~600 episodes with an average score of ~15.5. \n",
     "\n",
+    " ```\n",
+    " Episode 100\tAverage Score: 1.00\n",
+    " Episode 200\tAverage Score: 4.52\n",
+    " Episode 300\tAverage Score: 8.26\n",
+    " Episode 400\tAverage Score: 9.80\n",
+    " Episode 500\tAverage Score: 11.98\n",
+    " Episode 600\tAverage Score: 13.07\n",
+    " Episode 700\tAverage Score: 14.77\n",
+    " Episode 800\tAverage Score: 15.38\n",
+    " Episode 900\tAverage Score: 15.92\n",
+    " Episode 1000\tAverage Score: 16.17\n",
+    " Episode 1100\tAverage Score: 15.47\n",
+    " Episode 1200\tAverage Score: 15.76\n",
+    " Episode 1300\tAverage Score: 15.48\n",
+    " Episode 1400\tAverage Score: 15.99\n",
+    " Episode 1500\tAverage Score: 15.31\n",
+    " Episode 1600\tAverage Score: 15.83\n",
+    " Episode 1700\tAverage Score: 16.09\n",
+    " Episode 1800\tAverage Score: 15.05\n",
+    " ```\n",
+    "\n",
     "![alt text](vanilla.png \"Final Double DQN Performance\")\n",
     "\n",
     "Even after adjusting the epsilon decay values the agent's performance remained low while  plateauing on later episodes.\n",
@@ -32,7 +53,45 @@
     "\n",
     "![alt text](double_dqn_0.005_994.png \"Final Double DQN Performance\")\n",
     "\n",
-    "\n"
+    "\n",
+    "```\n",
+    "Episode 100\tAverage Score: 0.56\n",
+    "Episode 200\tAverage Score: 4.62\n",
+    "Episode 300\tAverage Score: 9.31\n",
+    "Episode 400\tAverage Score: 12.14\n",
+    "Episode 500\tAverage Score: 13.90\n",
+    "Episode 600\tAverage Score: 15.01\n",
+    "Episode 700\tAverage Score: 15.58\n",
+    "Episode 800\tAverage Score: 16.56\n",
+    "Episode 900\tAverage Score: 16.47\n",
+    "Episode 915\tAverage Score: 17.02\n",
+    "Episode 917\tAverage Score: 17.11\n",
+    "Episode 920\tAverage Score: 17.15\n",
+    "Episode 921\tAverage Score: 17.18\n",
+    "Episode 923\tAverage Score: 17.22\n",
+    "Episode 924\tAverage Score: 17.23\n",
+    "Episode 925\tAverage Score: 17.30\n",
+    "Episode 926\tAverage Score: 17.31\n",
+    "Episode 927\tAverage Score: 17.34\n",
+    "Episode 928\tAverage Score: 17.36\n",
+    "Episode 929\tAverage Score: 17.37\n",
+    "Episode 930\tAverage Score: 17.42\n",
+    "Episode 931\tAverage Score: 17.44\n",
+    "Episode 932\tAverage Score: 17.48\n",
+    "Episode 966\tAverage Score: 17.48\n",
+    "Episode 967\tAverage Score: 17.51\n",
+    "Episode 969\t\tAverage Score: 17.51\n",
+    "Episode 970\t    Average Score: 17.55\n",
+    "Episode 1000\tAverage Score: 16.93\n",
+    "Episode 1100\tAverage Score: 15.74\n",
+    "Episode 1200\tAverage Score: 16.25\n",
+    "Episode 1300\tAverage Score: 15.58\n",
+    "Episode 1400\tAverage Score: 16.09\n",
+    "Episode 1500\tAverage Score: 16.37\n",
+    "Episode 1600\tAverage Score: 15.26\n",
+    "Episode 1700\tAverage Score: 16.16\n",
+    "Episode 1800\tAverage Score: 15.58\n",
+    "```"
    ]
   },
   {
