--- a/Report.ipynb
+++ b/Report.ipynb
@@ -80,17 +80,17 @@
     "Episode 932\tAverage Score: 17.48\n",
     "Episode 966\tAverage Score: 17.48\n",
     "Episode 967\tAverage Score: 17.51\n",
-    "Episode 969\t\tAverage Score: 17.51\n",
-    "Episode 970\t    Average Score: 17.55\n",
-    "Episode 1000\tAverage Score: 16.93\n",
-    "Episode 1100\tAverage Score: 15.74\n",
-    "Episode 1200\tAverage Score: 16.25\n",
-    "Episode 1300\tAverage Score: 15.58\n",
-    "Episode 1400\tAverage Score: 16.09\n",
-    "Episode 1500\tAverage Score: 16.37\n",
-    "Episode 1600\tAverage Score: 15.26\n",
-    "Episode 1700\tAverage Score: 16.16\n",
-    "Episode 1800\tAverage Score: 15.58\n",
+    "Episode 969\tAverage Score: 17.51\n",
+    "Episode 970\tAverage Score: 17.55\n",
+    "Episode 1000 Average Score: 16.93\n",
+    "Episode 1100 Average Score: 15.74\n",
+    "Episode 1200 Average Score: 16.25\n",
+    "Episode 1300 Average Score: 15.58\n",
+    "Episode 1400 Average Score: 16.09\n",
+    "Episode 1500 Average Score: 16.37\n",
+    "Episode 1600 Average Score: 15.26\n",
+    "Episode 1700 Average Score: 16.16\n",
+    "Episode 1800 Average Score: 15.58\n",
     "```"
    ]
   },
